Fix overlay z-index issue: https://screenshot.googleplex.com/4dKq3iZa3EPMVnm

--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -216,6 +216,7 @@ form.login {
   animation: fadeIn 0.1s;
   animation-fill-mode: forwards;
   display:none;
+  z-index: 1;
 }
 
 @keyframes fadeIn {
